# forge

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.forge/: README.md
.forge/prompts/: context-update.md  implementation.md  spec-creation.md  task-breakdown.md
.forge/templates/: handoff.md
.forge/workflows/: phase-0.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py  002_core_schema.py  003_rls_policies.py
backend/app/: __init__.py  config.py  constants.py  main.py
backend/app/api/: __init__.py  admin_auth.py  admin_byok.py  admin_documents.py  health.py  inference.py  messages.py  sessions.py
backend/app/core/: __init__.py  auth.py  encryption.py  exception_handlers.py  exceptions.py  llm_credentials.py  llm_router.py  logging.py  middleware.py
backend/app/db/: __init__.py  api_key_repository.py  base.py  document_repository.py  memory_store.py  message_repository.py  orm_models.py  redis_client.py  session.py  session_repository.py
backend/app/models/: __init__.py  admin.py  byok.py  document.py  inference.py  message.py  session.py
backend/app/services/: __init__.py  budget_service.py  byok_service.py  chunking_service.py  embedding_service.py  inference_service.py  litellm_config_service.py  message_service.py  model_alias_service.py  rag_service.py  rate_limit_service.py  session_service.py
backend/tests/: conftest.py
backend/tests/ci/: test_ci_contract.py
backend/tests/integration/: test_admin_auth_api.py  test_health_api.py  test_messages_api.py  test_sessions_api.py
backend/tests/unit/: test_auth.py  test_budget_service.py  test_byok_service.py  test_chunking_service.py  test_config.py  test_document_repository.py  test_exceptions.py  test_llm_router.py  test_message_service.py  test_model_alias_service.py  test_rag_service.py  test_redis_client.py  test_session_service.py
docs/: ARCHITECTURE.md  CONTEXT.md  CONTEXT_MAP.md  CONVENTIONS.md  DECISIONS_LOG.md  ENVIRONMENT.md  FEATURES.md  FORGE_DEV_FRAMEWORK.md  GIT_WORKFLOW.md  LOGGING.md  MANUAL_TESTING.md  PHASE_GATES.md  QUALITY_GATES.md  RITUALS.md  SCOPE.md  SECURITY.md  STATE.md  VALIDATION.md  WORLD_SIGNALS.md  forge.md  prompts_used.md  workflow.md
docs/adr/: ADR-000-template.md  ADR-001-langgraph-over-autogen.md  ADR-002-option-b-graph.md  ADR-003-litellm-routing.md
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: global-error.tsx  layout.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/admin/byok/: page.tsx
frontend/app/admin/documents/: page.tsx
frontend/app/admin/login/: page.tsx
frontend/components/admin/: admin-login-form.tsx
frontend/components/chat/: budget-bar.tsx  chat-container.tsx  chat-input.tsx  markdown-content.tsx  message-bubble.tsx  message-list.tsx
frontend/hooks/: use-chat.ts  use-session.ts
frontend/lib/: api-config.ts
frontend/lib/api/: chat-client.ts
frontend/lib/stores/: session-store.ts
frontend/lib/supabase/: client.ts  env.ts  server.ts
frontend/scripts/: with-root-env.mjs
infra/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml
scripts/: bootstrap.sh  ci_check.ps1  ci_check.sh  context_refresh.sh  create_spec.sh  create_task.sh
specs/: _template.spec.md
specs/phase-0/: F001-scaffolding.spec.md  F002-byok.spec.md  F003-llm-routing.spec.md  F004-session-management.spec.md  F005-conversation-ui.spec.md  F006-admin-auth.spec.md  F007-rag-foundation.spec.md  F008-supabase-schema.spec.md
tasks/: BACKLOG.md  BLOCKED.md  DONE.md  HUMAN_TASKS.md  IN_PROGRESS.md  KNOWN_ISSUES.md  PARKING_LOT.md  THIS_WEEK.md  _format.md
turns/: README.md  Turn-00-start.md  Turn-00-stop.md  Turn-01-start.md  Turn-02-start.md  Turn-02-stop.md  Turn-03-start.md  Turn-03-stop.md  Turn-04-start.md  Turn-04-stop.md  Turn-05-start.md  Turn-05-stop.md  Turn-06-start.md  Turn-06-stop.md  Turn-07-start.md  Turn-07-stop.md  Turn-08-start.md  Turn-08-stop.md  Turn-09-start.md  Turn-09-stop.md  Turn-10-start.md  Turn-10-stop.md  Turn-11-start.md  Turn-11-stop.md  Turn-12-start.md  Turn-12-stop.md  Turn-13-start.md  Turn-13-stop.md  Turn-14-start.md  Turn-14-stop.md  Turn-15-stop.md  Turn-16-start.md  Turn-16-stop.md  Turn-17-start.md  Turn-17-stop.md
