[tool.poetry]
name = "forge"
version = "0.0.0"
description = "BYOK Open-Source Agent Platform — self-hosted, multi-session AI agent workbench"
authors = ["KSR"]
readme = "README.md"
license = "MIT"
python = "^3.11"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"

# API Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"

# Agent Orchestration
langgraph = "^0.4.0"
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.3.0"
langchain-anthropic = "^0.3.0"

# LLM Routing
litellm = "^1.60.0"

# Prompt Optimization
dspy-ai = "^2.5.0"

# Database & ORM
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"
supabase = "^2.11.0"

# Graph Database
neo4j = "^5.27.0"

# Cache & Message Queue
redis = "^5.2.0"
celery = {extras = ["redis"], version = "^5.4.0"}

# Temporal (Durable Workflows)
temporalio = "^1.9.0"

# MCP (Model Context Protocol)
mcp = "^1.0.0"

# Observability
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-instrumentation-fastapi = "^0.50b0"
opik = "^1.5.0"
posthog = "^3.7.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.19.0"}

# Security & Guardrails
guardrails-ai = "^0.5.0"
slowapi = "^0.1.9"

# Code Execution Sandbox
e2b = "^1.1.0"

# Utilities
httpx = "^0.28.0"
websockets = "^14.0"
python-multipart = "^0.0.18"
python-dotenv = "^1.0.1"
weasyprint = "^63.0"
pyyaml = "^6.0.2"

# NLP (Entity Extraction)
spacy = "^3.8.0"

# Feature Flags
growthbook = "^1.2.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-html = "^4.1.0"
pytest-mock = "^3.14.0"
httpx = "^0.28.0"
locust = "^2.32.0"

# Linting & Formatting
ruff = "^0.8.0"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.0"

# Pre-commit
pre-commit = "^4.0.0"

# Security Audit
pip-audit = "^2.7.0"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "DTZ", "ISC", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "ERA"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "-v --tb=short"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
