[tool.poetry]
name = "forge"
version = "0.0.0"
description = "BYOK Open-Source Agent Platform — self-hosted, multi-session AI agent workbench"
authors = ["KSR"]
readme = "README.md"
license = "MIT"
packages = [{include = "app", from = "backend"}]

[tool.poetry.dependencies]
# Target Environment Support
python = ">=3.12,<3.14"

# Core
regex = "^2026.5.9"

# API Framework
fastapi = "^0.137.0"
uvicorn = { extras = ["standard"], version = "^0.49.0" }
pydantic = "^2.13.0"
pydantic-settings = "^2.14.1"

# Agent Orchestration
langchain = "^1.3.9"
langgraph = "^1.2.5"
langchain-core = "^1.4.7"
langchain-community = "^0.4.2"
langchain-openai = "^1.3.2"
langchain-anthropic = "^1.4.6"

# LLM Routing
litellm = "^1.89.0"

# Prompt Optimization
dspy-ai = "^3.2.1"

# Database & ORM
sqlalchemy = {extras = ["asyncio"], version = "^2.0.51"}
alembic = "^1.18.4"
asyncpg = "^0.30.0"
supabase = "^2.20.0"

# Graph Database
neo4j = "^6.2.0"

# Cache & Message Queue
redis = "^6.2.0"
celery = {extras = ["redis"], version = "^5.6.3"}

# Temporal (Durable Workflows)
temporalio = "^1.28.0"

# MCP (Model Context Protocol)
mcp = "^1.15.0"

# Observability
opentelemetry-api = "^1.42.0"
opentelemetry-sdk = "^1.42.0"
opentelemetry-instrumentation-fastapi = "^0.63b0"
opik = "^1.10.0"
posthog = "^6.5.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.62.0"}

# Security & Guardrails
guardrails-ai = "^0.7.0"
slowapi = "^0.1.9"

# Code Execution Sandbox
e2b = "^2.29.0"

# Utilities
structlog = "^25.5.0"
httpx = "^0.28.1"
websockets = "^15.0.1"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
weasyprint = "^66.0"
pyyaml = "^6.0.3"

# NLP (Entity Extraction)
spacy = "^3.8.7"

# Feature Flags
growthbook = "^2.2.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^9.0.3"
pytest-asyncio = "^1.4.0"
pytest-cov = "^7.1.0"
pytest-html = "^4.2.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"
locust = "^2.44.3"

# Linting & Formatting
ruff = "^0.15.17"
mypy = "^2.1.0"
black = "^26.5.1"
isort = "^8.0.1"

# Pre-commit
pre-commit = "^4.6.0"

# Security Audit
pip-audit = "^2.10.1"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "DTZ", "ISC", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "ASYNC", "G"]
ignore = ["S101", "ERA001"]  # S101: assert in tests; ERA001: developer signature headers

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-v --tb=short"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
